# juye

./: .gitignore  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
arch/arm64/: Cargo.toml
arch/arm64/src/: lib.rs
boot/: Cargo.toml
boot/src/: boot.s  main.rs
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat
drivers/uart/: Cargo.toml
drivers/uart/src/: lib.rs  plo11.rs
drivers/virtio/: Cargo.toml
hal/: Cargo.toml
hal/src/: lib.rs  mmio.rs  platform.rs  uart.rs
kcore/: Cargo.toml
kcore/src/: lib.rs  once_lock.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  macros.rs
linkers/: virt.ld
