# SPDX-License-Identifier: Apache-2.0

[package]
name = "boot"
authors.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arch_arm64 = { workspace = true }

kernel = { workspace = true }


[lints]
workspace = true
