# SPDX-License-Identifier: Apache-2.0

[package]
name = "kernel"
authors.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["qemu_virt"]

qemu_virt = ["dep:qemu_virt_platform"]

[dependencies]
hal = { workspace = true }
kcore = { workspace = true }

qemu_virt_platform = { workspace = true, optional = true }

[lints]
workspace = true
